<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DetailsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMarca"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/actvMarcas"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:startIconDrawable="@drawable/ic_car">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietMarca"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLength="30"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilModelo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/actvModelo"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMarcaDetail"
        app:startIconDrawable="@drawable/ic_modelo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietModelo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:maxLength="30"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAnio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/actvAnio"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilModelo"
        app:layout_constraintVertical_bias="0.04000002"
        app:startIconDrawable="@drawable/ic_year">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAnio"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrecio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/actvPrecio"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilAnio"
        app:layout_constraintVertical_bias="0.04000002"
        app:startIconDrawable="@drawable/ic_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPrecio"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="number"
            android:maxLength="7"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/white"
        android:onClick="click"
        android:scrollbarSize="3dp"
        android:text="@string/btnEditar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/ic_edit"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="click"
        android:text="@string/btnEliminar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:text="Eliminar" />

    <ImageView
        android:id="@+id/ivMarcaDetail"
        android:layout_width="0dp"
        android:layout_height="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMarca"
        app:srcCompat="@drawable/auto" />

</androidx.constraintlayout.widget.ConstraintLayout>