<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EditActivity">

    <ImageView
        android:id="@+id/ivMarcaSeleccionada"
        android:layout_width="0dp"
        android:layout_height="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMarca"
        app:srcCompat="@drawable/auto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMarca"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="filled"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_car">

        <AutoCompleteTextView
            android:id="@+id/tietMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/actvMarcas"
            android:inputType="none"
            android:textColor="#757575"
            android:textSize="16sp"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilModelo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/actvModelo"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMarcaSeleccionada"
        app:startIconDrawable="@drawable/ic_modelo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietModelo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:maxLength="30"
            android:textSize="14sp"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAnio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/actvAnio"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilModelo"
        app:startIconDrawable="@drawable/ic_year">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAnio"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrecio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/actvPrecio"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilAnio"
        app:startIconDrawable="@drawable/ic_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPrecio"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="number"
            android:maxLength="7"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:onClick="click"
        android:scrollbarSize="3dp"
        android:text="@string/btnActualizar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPrecio"
        app:layout_constraintVertical_bias="0.721" />

</androidx.constraintlayout.widget.ConstraintLayout>